--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="./css/styles.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-
+    <!-- <div class="container">
+ 
+  </div> -->
     <script src="js/scripts.js"></script>
   </body>
 </html>
