--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link href="./css/styles.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <!-- <div class="container">
+    <div class="container">
+      <h1>All the Pokemon:</h1>
+      <ul class="pokemon-list"></ul>
  
-  </div> -->
+  </div>
     <script src="js/scripts.js"></script>
   </body>
 </html>
