--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Simple JS App</title>
-    <link href="./css/styles.css" type="text/css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-      <h1>All the Pokemon:</h1>
-      <ul class="pokemon-list"></ul>
- 
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Simple JS App</title>
+  <link href="./css/styles.css" type="text/css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="container">
+    <h1>All the Pokemon:</h1>
+    <ul class="pokemon-list"></ul>
+
   </div>
-    <script src="js/scripts.js"></script>
-  </body>
+  <script src="js/promise-polyfill.js"></script>
+  <script src="js/fetch.umd.js"></script>
+  <script src="js/scripts.js"></script>
+</body>
+
 </html>
