add to modal close on esc and click

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <div class="container">
+  
     <h1>All the Pokemon:</h1>
-    <ul class="pokemon-list"></ul>
-
+    <ul class="pokemon-list"></ul>  
+<div class ="modal-container">
   </div>
   <script src="js/promise-polyfill.js"></script>
   <script src="js/fetch.umd.js"></script>
