--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Simple JS App</title>
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
   <link href="./css/styles.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-  
-    <h1>All the Pokemon:</h1>
-    <ul class="pokemon-list"></ul>  
-<div class ="modal-container">
+
+  <h1 class="title">All the Pokemon</h1>
+  <ul class="pokemon-list"></ul>
+  <div class="modal-container">
   </div>
   <script src="js/promise-polyfill.js"></script>
   <script src="js/fetch.umd.js"></script>
