--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <h1 class="title">All the Pokemon</h1>
+  <h1 class="title">Pokemon</h1>
   <ul class="pokemon-list"></ul>
   <div class="modal-container">
   </div>
