--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     </nav>
 
   <main>
-    <ul class="pokemon-list list-group"></ul>
-
+    <div class="pokemon-list row"></div>
+ </main>
+ <footer>
     <!-- Modal -->
     <div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="Modal" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -50,8 +51,7 @@
         </div>
       </div>
     </div>
-
-  </main>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
