--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="navbar-toggler-icon"></span>
         
       </button>
-      <div class="collapse navbar-collapse input-div">
+      <div class="collapse navbar-collapse" id="navbarNav">
         <form class=" form-inline ml-auto">
           <input type="text" id="searchInput" class="nav-item form-control custom-input">
           <button onclick="findPokemon()" class="btn btn-warning">Search</button>
