--- a/index.html
+++ b/index.html
@@ -24,15 +24,13 @@
         
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <form class=" form-inline ml-auto">
+        <div class=" form-inline ml-auto">
           <input type="text" id="searchInput" class="nav-item form-control custom-input" aria-label="Searchbar for a Pokemon">
-    
-          <button onclick="findPokemon()" class="btn btn-warning">Search</button>
-          <div id="results"></div>
-        </form>
+          <button id="searchButton" class="btn btn-warning">Search</button>
+        </div>
       </div>
     </nav>
-
+    <div id="results"></div>
   <main>
     <div class="pokemon-list row"></div>
  </main>
