--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <link href="./src/css/styles.css" type="text/css" rel="stylesheet">
+  <link href="dist/styles.mini.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -59,10 +59,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-  <script src="./src/js/promise-polyfill.js"></script>
-  <script src="./src/js/fetch.umd.js"></script>
-  <script src="./src/js/tota11y.min.js"></script>
-  <script src="./src/js/scripts.js"></script>
+  <script src="js/promise-polyfill.js"></script>
+  <script src="js/fetch.umd.js"></script>
+  <script src="js/tota11y.min.js"></script>
+  <script src="dist/script.mini.js"></script>
 </body>
 
 </html>
