--- a/index.html
+++ b/index.html
@@ -12,47 +12,51 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <link href="dist/styles.mini.css" type="text/css" rel="stylesheet">
+  <link href="css/styles.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-  <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-light">
-    <img src="./img/logo-Pokemon.png" height="80" class="d-inline-block align-top img-pokemon"
-      alt="pokemon logo and a picture of picachu">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+  <div class="background"></div>
+  <div class="content">
+    <nav class="navbar sticky-top navbar-expand-sm navbar-light bg-light">
+      <img src="./img/logo-Pokemon.png" height="80" class="d-inline-block align-top img-pokemon"
+        alt="pokemon logo and a picture of picachu">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
 
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <div class=" form-inline ml-auto">
-        <input type="text" id="searchInput" class="nav-item form-control custom-input"
-          aria-label="Searchbar for a Pokemon">
-        <button id="searchButton" class="btn btn-warning">Search</button>
-      </div>
-    </div>
-  </nav>
-  <main>
-    <div class="pokemon-list row"></div>
-  </main>
-  <footer>
-    <!-- Modal -->
-    <div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModal"
-      aria-hidden="true">
-
-      <div class="modal-content modal-dialog" role="document">
-        <div class="modal-header">
-          <h5 class="modal-title">ModalH5</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <div class=" form-inline ml-auto">
+          <input type="text" id="searchInput" class="nav-item form-control custom-input"
+            aria-label="Searchbar for a Pokemon">
+          <button id="searchButton" class="btn btn-warning">Search</button>
         </div>
       </div>
-    </div>
+    </nav>
 
-  </footer>
+    <main>
+      <div class="pokemon-list row"></div>
+    </main>
+    <footer>
+      <!-- Modal -->
+      <div class="modal fade" id="pokemonModal" tabindex="-1" role="dialog" aria-labelledby="pokemonModal"
+        aria-hidden="true">
+
+        <div class="modal-content modal-dialog" role="document">
+          <div class="modal-header">
+            <h5 class="modal-title">ModalH5</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+          </div>
+        </div>
+      </div>
+
+    </footer>
+  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
