--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <link href="css/styles.css" type="text/css" rel="stylesheet">
+  <!-- <link href="dist/styles.mini.css" type="text/css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -45,7 +46,7 @@
 
         <div class="modal-content modal-dialog" role="document">
           <div class="modal-header">
-            <h5 class="modal-title">ModalH5</h5>
+            <h5 class="modal-title"></h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
