--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
         </div>
       </div>
     </nav>
-
     <main>
+      <div class="text-center spinner">
+        <div class="spinner-border text-warning " role="status">
+          <span class="sr-only">Loading...</span>
+        </div>
+      </div>
+
       <div class="pokemon-list row"></div>
+
     </main>
     <footer>
       <!-- Modal -->
@@ -70,7 +76,8 @@
   <script src="js/promise-polyfill.js"></script>
   <script src="js/fetch.umd.js"></script>
   <script src="js/tota11y.min.js"></script>
-  <script src="dist/script.mini.js"></script>
+  <script src="js/scripts.js"></script>
+  <!-- <script src="dist/script.mini.js"></script> -->
 </body>
 
 </html>
