--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
           </div>
         </div>
       </div>
-
     </footer>
+    <ul class="pagination justify-content-center"></ul>
+
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
